--- a/WingsOn.Api/WingsOn.Api.csproj
+++ b/WingsOn.Api/WingsOn.Api.csproj
@@ -111,6 +111,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\FlightsController.cs" />
     <Compile Include="Controllers\PeopleController.cs" />
+    <Compile Include="Models\PersonDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -125,7 +126,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WingsOn.Dal\WingsOn.Dal.csproj">
