--- a/WingsOn.Api/packages.config
+++ b/WingsOn.Api/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.9.1" targetFramework="net47" />
+  <package id="Autofac.Owin" version="4.2.0" targetFramework="net47" />
   <package id="Autofac.WebApi2" version="4.2.0" targetFramework="net47" />
+  <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net47" />
+  <package id="AutoMapper" version="8.0.0" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net47" />
@@ -10,6 +13,9 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net47" />
   <package id="Microsoft.Owin" version="4.0.1" targetFramework="net47" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.1" targetFramework="net47" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net47" />
   <package id="Owin" version="1.0" targetFramework="net47" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net47" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net47" />
 </packages>
