--- a/WingsOn.Api/packages.config
+++ b/WingsOn.Api/packages.config
@@ -5,6 +5,7 @@
   <package id="Autofac.WebApi2" version="4.2.0" targetFramework="net47" />
   <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net47" />
   <package id="AutoMapper" version="8.0.0" targetFramework="net47" />
+  <package id="log4net" version="2.0.8" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net47" />
@@ -12,10 +13,16 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net47" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net47" />
   <package id="Microsoft.Owin" version="4.0.1" targetFramework="net47" />
+  <package id="Microsoft.Owin.FileSystems" version="3.0.1" targetFramework="net47" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.1" targetFramework="net47" />
+  <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net47" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net47" />
+  <package id="NJsonSchema" version="9.13.18" targetFramework="net47" />
+  <package id="NSwag.AspNet.Owin" version="12.0.14" targetFramework="net47" />
+  <package id="NSwag.Core" version="12.0.14" targetFramework="net47" />
+  <package id="NSwag.SwaggerGeneration" version="12.0.14" targetFramework="net47" />
+  <package id="NSwag.SwaggerGeneration.WebApi" version="12.0.14" targetFramework="net47" />
   <package id="Owin" version="1.0" targetFramework="net47" />
-  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net47" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net47" />
 </packages>
