--- a/WingsOn.Api/Web.config
+++ b/WingsOn.Api/Web.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
   <appSettings></appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7" />
@@ -90,6 +93,24 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-    <modules runAllManagedModulesForAllRequests="true"/>
+    <modules runAllManagedModulesForAllRequests="true" />
   </system.webServer>
+  <log4net>
+    <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender" >
+      <file type="log4net.Util.PatternString" value="D:\projects\WingsOn\WingsOn.Api\Logs\" />
+      <appendToFile value="true" />
+      <rollingStyle value="Date" />
+      <datePattern value="yyyy-MM-dd'.log'" />
+      <maxSizeRollBackups value="3" />
+      <maximumFileSize value="5000KB" />
+      <staticLogFileName value="false" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+      </layout>
+    </appender>
+    <root>
+      <level value="INFO" />
+      <appender-ref ref="RollingLogFileAppender" />
+    </root>
+  </log4net>
 </configuration>
