--- a/WingsOn.Api/WingsOn.Api.csproj
+++ b/WingsOn.Api/WingsOn.Api.csproj
@@ -32,8 +32,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>
-    </DocumentationFile>
+    <DocumentationFile>bin\WingsOn.Api.xml</DocumentationFile>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -90,6 +90,9 @@
     </Reference>
     <Reference Include="NJsonSchema, Version=9.13.18.0, Culture=neutral, PublicKeyToken=c2f9c3bdfae56102, processorArchitecture=MSIL">
       <HintPath>..\packages\NJsonSchema.9.13.18\lib\net45\NJsonSchema.dll</HintPath>
+    </Reference>
+    <Reference Include="NSwag.Annotations, Version=12.0.14.0, Culture=neutral, PublicKeyToken=c2d88086e098d109, processorArchitecture=MSIL">
+      <HintPath>..\packages\NSwag.Annotations.12.0.14\lib\net45\NSwag.Annotations.dll</HintPath>
     </Reference>
     <Reference Include="NSwag.AspNet.Owin, Version=12.0.14.0, Culture=neutral, PublicKeyToken=c2d88086e098d109, processorArchitecture=MSIL">
       <HintPath>..\packages\NSwag.AspNet.Owin.12.0.14\lib\net45\NSwag.AspNet.Owin.dll</HintPath>
@@ -160,11 +163,13 @@
     <Compile Include="App_Start\AutoMapperConfig.cs" />
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="DTOs\ApiError.cs" />
     <Compile Include="DTOs\Request\BookingDetailsDtoReq.cs" />
     <Compile Include="DTOs\Request\BookingDtoReq.cs" />
     <Compile Include="DTOs\Request\BookingPersonDtoReq.cs" />
     <Compile Include="DTOs\Request\PersonDtoReq.cs" />
     <Compile Include="DTOs\Response\ApiError.cs" />
+    <Compile Include="Filters\AuditFilterAttribute.cs" />
     <Compile Include="Filters\CustomExceptionFilterAttribute.cs" />
     <Compile Include="Filters\ValidateModelAttribute.cs" />
     <Compile Include="Controllers\BaseController.cs" />
@@ -176,6 +181,7 @@
     <Compile Include="DTOs\Response\BookingDtoRes.cs" />
     <Compile Include="DTOs\Response\FlightDtoRes.cs" />
     <Compile Include="DTOs\Response\PersonDtoRes.cs" />
+    <Compile Include="Helpers\ValidationHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
