--- a/WingsOn.Api/packages.config
+++ b/WingsOn.Api/packages.config
@@ -19,6 +19,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net47" />
   <package id="NJsonSchema" version="9.13.18" targetFramework="net47" />
+  <package id="NSwag.Annotations" version="12.0.14" targetFramework="net47" />
   <package id="NSwag.AspNet.Owin" version="12.0.14" targetFramework="net47" />
   <package id="NSwag.Core" version="12.0.14" targetFramework="net47" />
   <package id="NSwag.SwaggerGeneration" version="12.0.14" targetFramework="net47" />
